--- a/_includes/container.html
+++ b/_includes/container.html
@@ -1,254 +1,226 @@
+<!-- Page Content -->
+<div class="container">
 
-    <!-- Page Content -->
-    <div class="container">
+	<div class="row">
 
-        <div class="row">
+		<!-- Blog Post Content Column -->
+		<div class="col-lg-8">
 
-            <!-- Blog Post Content Column -->
-            <div class="col-lg-8">
+			<!-- Content -->
+			<div> {{ content }} </div>
 
-	<!-- Content -->
-	<div> {{ content }} </div>
+			<!-- Blog Post -->
+			<div class="post-list" style="list-style-type: none;">
+				{% for post in site.posts %}
+				<h2>
+					<a class="post-link" href="{{ post.url | prepend: site.baseurl }}">📝 {{ post.title }}</a>
+				</h2>
+				<div class="author" style="margin-top: -10px;">Posted by
+					<i class="fa fa-user"></i><a href="http://www.airrayagroup.com/"> {{ post.author}}</a>
+					<span class="post-meta"><i class="fa fa-calendar"></i> {{ post.date | date: "%b %-d, %Y" }}</span>
+				</div>
+				<div class="excerpt">{{ post.excerpt }}</div>
+				<div class="readmore" style="float: left;">
+					{% if post.content | post_contains_excerpt_tag %}
+					<a href="{{ post.url | prepend: site.baseurl }}">Read more</a>
+					{% endif %}
+				</div>
+			</div>
+			<hr>
+			<div class="post-list" style="list-style-type: none;">
+				{% endfor %}
+			</div>
+			<!-- Pagination links -->
+			<span class='st_sharethis' displayText='ShareThis'></span>
+			<span class='st_facebook' displayText='Facebook'></span>
+			<span class='st_twitter' displayText='Tweet'></span>
+			<span class='st_linkedin' displayText='LinkedIn'></span>
+			<span class='st_pinterest' displayText='Pinterest'></span>
+			<span class='st_email' displayText='Email'></span>
+			<!-- Pagination links -->
+			<div class="pagination">
+				<ul>
+					{% if paginator.previous_page %}
 
-                <!-- Blog Post -->
-                	<div class="post-list" style="list-style-type: none;">
-						{% for post in site.posts %} 	
-							<h2>
-								<a class="post-link" href="{{ post.url | prepend: site.baseurl }}">📝 {{ post.title }}</a>
-							</h2>
-							<div class="author" style="margin-top: -10px;">Posted by
-								<i class="fa fa-user"></i><a href="http://www.airrayagroup.com/"> {{ post.author}}</a>
-								<span class="post-meta"><i class="fa fa-calendar"></i> {{ post.date | date: "%b %-d, %Y" }}</span>
-							</div>
-							<div class="excerpt">{{ post.excerpt }}</div>
-							<div class="readmore" style="float: left;">
-								{% if post.content | post_contains_excerpt_tag %}
-									<a href="{{ post.url | prepend: site.baseurl }}">Read more</a>
-								{% endif %}
-							</div>								
-					</div>
-					<hr>
-						<div class="post-list" style="list-style-type: none;">			
-							{% endfor %} 
-						</div>
-					<!-- Pagination links -->
-				<span class='st_sharethis' displayText='ShareThis'></span>
-				<span class='st_facebook' displayText='Facebook'></span>
-				<span class='st_twitter' displayText='Tweet'></span>
-				<span class='st_linkedin' displayText='LinkedIn'></span>
-				<span class='st_pinterest' displayText='Pinterest'></span>
-				<span class='st_email' displayText='Email'></span>
-					<!-- Pagination links -->
-					<div class="pagination">
-					  <ul>
-						{% if paginator.previous_page %}
+					{% if paginator.previous_page == 1 %}
+					<li><a href="/sciblog/">Previous</a></li>
+					{% else %}
+					<li><a href="/sciblog/page{{ paginator.previous_page }}">Previous</a></li>
+					{% endif %}
 
-						  {% if paginator.previous_page == 1 %}
-							<li><a href="/sciblog/">Previous</a></li>
-						  {% else %}
-							<li><a href="/sciblog/page{{ paginator.previous_page }}">Previous</a></li>
-						  {% endif %}
+					{% else %}
+					<li><span class="disabled">Previous</span></li>
+					{% endif %}
 
-						{% else %}
-						  <li><span class="disabled">Previous</span></li>
-						{% endif %}
+					{% if paginator.page == 1 %}
+					<li><span class="active">1</span></li>
+					{% else %}
+					<li><a href="/sciblog/">1</a></li>
+					{% endif %}
 
-						{% if paginator.page == 1 %}
-						  <li><span class="active">1</span></li>
-						{% else %}
-						  <li><a href="/sciblog/">1</a></li>
-						{% endif %}
+					{% for count in (2..paginator.total_pages) %}
 
-						{% for count in (2..paginator.total_pages) %}
+					{% if count == paginator.page %}
+					<li><span class="active">{{ count }}</span></li>
+					{% else %}
+					<li><a href="/sciblog/page{{ count }}">{{ count }}</a></li>
+					{% endif %}
+					{% endfor %}
 
-						  {% if count == paginator.page %}
-							<li><span class="active">{{ count }}</span></li>
-						  {% else %}
-							<li><a href="/sciblog/page{{ count }}">{{ count }}</a></li>
-						  {% endif %}
-						{% endfor %}
+					{% if paginator.next_page %}
+					<li><a href="/sciblog/page{{ paginator.next_page }}">Next</a></li>
+					{% else %}
+					<li><span class="disabled">Next</span></li>
+					{% endif %}
+				</ul>
+			</div>
+		</div>
 
-						{% if paginator.next_page %}
-						  <li><a href="/sciblog/page{{ paginator.next_page }}">Next</a></li>
-						{% else %}
-						  <li><span class="disabled">Next</span></li>
-						{% endif %}
-					  </ul>
-					</div>
-            </div>
+		<!-- Widget -->
+		<div class="col-md-4">
+			<!-- author widget -->
+			<div class="well">
+				<h4 style="text-align: center">This blog is maintained by <a href="../about.md">Jorge
+						M.G.</a></h4>
+				<ul class="list-inline" style="text-align: center">
+					<li>
+						<a href="mailto:jorge@on-orbit.dev">
+							<span class="fa-stack fa-2x">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/jorgepiloto">
+							<span class="fa-stack fa-2x">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-github fa-stack-1x fa-inverse"></i>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://linkedin.com/in/jorgepiloto">
+							<span class="fa-stack fa-2x">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://bitbucket.org/airrayagroup/">
+							<span class="fa-stack fa-2x">
+								<i class="fa fa-circle fa-stack-2x"></i>
+								<i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+							</span>
+						</a>
+					</li>
+				</ul>
+			</div>
 
-            <!-- Widget -->
-            <div class="col-md-4">
-		    <div class="well">
-		    <h4> Latest journal articles </h4>
+			<div class="well">
+				<h4> Latest journal articles </h4>
 
-		<!-- start sw-rss-feed code -->
-<script type="text/javascript">
-<!--
-rssfeed_url = new Array();
-rssfeed_url[0]="https://link.springer.com/search.rss?facet-content-type=Article&facet-journal-id=10569&channel-name=Celestial+Mechanics+and+Dynamical+Astronomy";
-rssfeed_url[1]="https://www.degenerateconic.com/feed";
-rssfeed_frame_width="350";
-rssfeed_frame_height="260";
-rssfeed_scroll="off";
-rssfeed_scroll_step="6";
-rssfeed_scroll_bar="on";
-rssfeed_target="_blank";
-rssfeed_font_size="12";
-rssfeed_font_face="";
-rssfeed_border="on";
-rssfeed_css_url="";
-rssfeed_title="on";
-rssfeed_title_name="Celestial mechanics and Dynamical Astronomy";
-rssfeed_title_bgcolor="#3366ff";
-rssfeed_title_color="#fff";
-rssfeed_title_bgimage="";
-rssfeed_footer="off";
-rssfeed_footer_name="rss feed";
-rssfeed_footer_bgcolor="#fff";
-rssfeed_footer_color="#333";
-rssfeed_footer_bgimage="";
-rssfeed_item_title_length="50";
-rssfeed_item_title_color="#666";
-rssfeed_item_bgcolor="#fff";
-rssfeed_item_bgimage="";
-rssfeed_item_border_bottom="on";
-rssfeed_item_source_icon="off";
-rssfeed_item_date="off";
-rssfeed_item_description="on";
-rssfeed_item_description_length="120";
-rssfeed_item_description_color="#666";
-rssfeed_item_description_link_color="#333";
-rssfeed_item_description_tag="off";
-rssfeed_no_items="100";
-rssfeed_cache = "3cb982e67e7ae662ac2c1266d6a25112";
+				<!-- start sw-rss-feed code -->
+				<script type="text/javascript">
+					rssfeed_url = new Array();
+					rssfeed_url[0] = "https://link.springer.com/search.rss?facet-content-type=Article&facet-journal-id=10569&channel-name=Celestial+Mechanics+and+Dynamical+Astronomy";
+					rssfeed_url[1] = "https://www.degenerateconic.com/feed";
+					rssfeed_frame_width = "350";
+					rssfeed_frame_height = "260";
+					rssfeed_scroll = "off";
+					rssfeed_scroll_step = "6";
+					rssfeed_scroll_bar = "on";
+					rssfeed_target = "_blank";
+					rssfeed_font_size = "12";
+					rssfeed_font_face = "";
+					rssfeed_border = "on";
+					rssfeed_css_url = "";
+					rssfeed_title = "on";
+					rssfeed_title_name = "Celestial mechanics and Dynamical Astronomy";
+					rssfeed_title_bgcolor = "#3366ff";
+					rssfeed_title_color = "#fff";
+					rssfeed_title_bgimage = "";
+					rssfeed_footer = "off";
+					rssfeed_footer_name = "rss feed";
+					rssfeed_footer_bgcolor = "#fff";
+					rssfeed_footer_color = "#333";
+					rssfeed_footer_bgimage = "";
+					rssfeed_item_title_length = "50";
+					rssfeed_item_title_color = "#666";
+					rssfeed_item_bgcolor = "#fff";
+					rssfeed_item_bgimage = "";
+					rssfeed_item_border_bottom = "on";
+					rssfeed_item_source_icon = "off";
+					rssfeed_item_date = "off";
+					rssfeed_item_description = "on";
+					rssfeed_item_description_length = "120";
+					rssfeed_item_description_color = "#666";
+					rssfeed_item_description_link_color = "#333";
+					rssfeed_item_description_tag = "off";
+					rssfeed_no_items = "100";
+					rssfeed_cache = "3cb982e67e7ae662ac2c1266d6a25112";
 //-->
-</script>
-<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
-<!-- end sw-rss-feed code -->
-		    </div>
+				</script>
+				<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
+				<!-- end sw-rss-feed code -->
+			</div>
 
-                <!-- Blog Categories -->
-                <div class="well">
-                    <h4>Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-								{% for cat in site.categories %}
-								{% assign cat_name = cat | first %}
-								{% assign cat_size = cat | last | size %}
-								{% assign cat_slug = cat_name | slugify  %}
-									<a class="bold" href="/category/{{cat_slug | prepend: site.baseurl}}">
-										{{cat_name}} ({{cat_size}})
-									</a>
-                        </div>
-                        <div class="col-lg-6">
-                        	{% endfor %}
-                        </div>
-                    </div>
-                    <!-- /.row -->
-                </div>
-                <!-- end -->
+			<!-- Recents post -->
+			<div class="well">
+				<h4>Recent posts</h4>
+				<ul class="posts" span="recent">
+					{% for post in site.posts limit:5 %}
+					<li>
+						<span>{{ post.date | date_to_string }}</span>
+						<a href="{{ BASE_PATH }}{{ post.url }}">
+							{{ post.title }}</a>
+					</li>
+					{% endfor %}
+				</ul>
+			</div>
 
-                <!-- Recents post -->
-                <div class="well">
-                	<h4>Recent posts</h4>
-                		<ul class="posts" span="recent">  
-							{% for post in site.posts limit:5 %}  
-							   <li>  
-								   <span>{{ post.date | date_to_string }}</span>
-								   <a href="{{ BASE_PATH }}{{ post.url }}">  
-								   {{ post.title }}</a>  
-							   </li>  
-							{% endfor %}  
-						</ul>
-                </div>
-                <!-- tags widget -->
-                <div class="well">
-                    <h4>Tags</h4>
-                        <ul>
-                            {% for tag in site.tags %}
-                            {% assign tag_name = tag | first %}
-                            {% assign tag_size = tag | last | size %}
-                            {% assign tag_slug = tag_name | slugify  %}
-                                <a class="tag-label bold" href="/tag/{{tag_slug | prepend: site.baseurl}}">
-                                    {{tag_name}} ({{tag_size}})
-                                </a>
-                            {% endfor %}
-                        </ul>
-                </div>
-                <!-- author widget -->
-                <div class="well">
-                    <h4>This blog is maintained by <a href="http://www.airrayagroup.com/">Jorge M.G.</a></h4>
-					<ul class="list-inline" style="text-align: center">
-                            <li>
-								<a href="https://www.facebook.com/airrayagroup/">
-									<span class="fa-stack fa-2x">
-									  <i class="fa fa-circle fa-stack-2x"></i>
-									  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-                            </li>
-                            <li>
-								<a href="http://webdesign.airrayagroup.com">
-									<span class="fa-stack fa-2x">
-									  <i class="fa fa-circle fa-stack-2x"></i>
-									  <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-                            </li>
-                            <li>
-								<a href="mailto:airrayagroup@gmail.com">
-									<span class="fa-stack fa-2x">
-									  <i class="fa fa-circle fa-stack-2x"></i>
-									  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-                            </li>
-                            <li>
-								<a href="https://bitbucket.org/airrayagroup/">
-									<span class="fa-stack fa-2x">
-									  <i class="fa fa-circle fa-stack-2x"></i>
-									  <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
-                            </li>
-                    </ul>
-                </div>
-				 <!-- subscribe -->
-                <div class="well">
-					<!-- Begin MailChimp Signup Form -->
-					<div id="mc_embed_signup">
-					<form action="https://maplelearning.us1.list-manage.com/subscribe?u=47d56ac42a95b4295600c0e64&id=5f9ede27c9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			<!-- subscribe -->
+			<div class="well">
+				<!-- Begin MailChimp Signup Form -->
+				<div id="mc_embed_signup">
+					<form
+						action="https://maplelearning.us1.list-manage.com/subscribe?u=47d56ac42a95b4295600c0e64&id=5f9ede27c9"
+						method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+						target="_blank" novalidate>
 						<div id="mc_embed_signup_scroll">
-						<h2>Subscribe to our mailing list</h2>
-					<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-					</label>
-						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-					</div>
-					<div class="mc-field-group">
-						<label for="mce-FNAME">First Name </label>
-						<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-					</div>
-					<div class="mc-field-group">
-						<label for="mce-LNAME">Last Name </label>
-						<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-					</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_47d56ac42a95b4295600c0e64_5f9ede27c9" tabindex="-1" value=""></div>
-						<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							<h2>Subscribe to our mailing list</h2>
+							<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+							<div class="mc-field-group">
+								<label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+								</label>
+								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+							</div>
+							<div class="mc-field-group">
+								<label for="mce-FNAME">First Name </label>
+								<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+							</div>
+							<div class="mc-field-group">
+								<label for="mce-LNAME">Last Name </label>
+								<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+							</div>
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>
+							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+									name="b_47d56ac42a95b4295600c0e64_5f9ede27c9" tabindex="-1" value=""></div>
+							<div class="clear"><input type="submit" value="Subscribe" name="subscribe"
+									id="mc-embedded-subscribe" class="button"></div>
 						</div>
 					</form>
-					</div>
-
-					<!--End mc_embed_signup-->
 				</div>
 
-            </div>
-        </div>
-        <!-- /.row -->
-       <hr>
+				<!--End mc_embed_signup-->
+			</div>
+
+		</div>
+	</div>
+	<!-- /.row -->
+	<hr>
